--- a/eleesa.html
+++ b/eleesa.html
@@ -29,7 +29,7 @@
   
     <nav class="navbar navbar-expand-lg fixed-top "style="color:white "id="navbar">
       <p class="navbar-brand" href="#">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
+        <img src="static/images/logo.png" alt="" class="logo">
         ELEESA-SRID
       </p>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
