--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ELEESA-SRID</title>
-  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/logo.png') }}">
+  <link rel="icon" type="image/x-icon" href="static/images/logo.png">
   <link rel="stylesheet" href="static/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
