--- a/executives.html
+++ b/executives.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" style="background-color:rgb(23,90,171); padding: 10px 20px;height:120px;">
     <p class="navbar-brand d-flex align-items-center" href="#"
         style="color: white; font-weight:600; font-size:20px;">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"
+        <img src="static/images/logo.png" alt="Logo"
             style="width: 85px; margin-left:0; margin-right: 10px;margin-bottom: 10px;">
         ELEESA-SRID
     </p>
