--- a/executives.html
+++ b/executives.html
@@ -42,7 +42,7 @@
         <!-- Overlay content -->
         <div class="sidenavc">
             <p class="inside-logo" href="#">
-                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
+                <img src="static/images/logo.png" alt="" class="logo">
                 ELEESA-SRID
             </p>
             <a href="#">Home</a>
