--- a/executives.html
+++ b/executives.html
@@ -55,7 +55,7 @@
         </div>
 <!-- JS for sidebar -->
 <script>
-    function openSidebar() {
+    function openNav() {
         document.getElementById("mobileSidebar").style.width = "100%";
     }
 
