--- a/executives.html
+++ b/executives.html
@@ -17,10 +17,10 @@
             style="width: 85px; margin-left:0; margin-right: 10px;margin-bottom: 10px;">
         ELEESA-SRID
     </p>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()" class="hamburger">&#9776;</span>
-
-      </button>
+    <button class="navbar-toggler d-lg-none border-0" type="button" onclick="openNav()" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon custom-hamburger"></span>
+    </button>
+    
 
     <div class="collapse navbar-collapse justify-content-end align-items-center d-none d-lg-flex" id="navbarNav">
         <ul class="navbar-nav">
