--- a/executives.html
+++ b/executives.html
@@ -18,7 +18,7 @@
         ELEESA-SRID
     </p>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()" class="hamburger">&#9776;</span>
+        <span  onclick="openNav()" class="hamburger">&#9776;</span>
     </button>
     
     
