--- a/executives.html
+++ b/executives.html
@@ -14,7 +14,7 @@
     <p class="navbar-brand d-flex align-items-center" href="#"
         style="color: white; font-weight:600; font-size:20px;">
         <img src="static/images/logo.png" alt="Logo"
-            style="width: 85px; margin-left:0; margin-right: 10px;margin-bottom: 10px;">
+            style="width: 85px;margin-bottom: 10px;">
         ELEESA-SRID
     </p>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
