--- a/executives.html
+++ b/executives.html
@@ -10,24 +10,26 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg fixed-top" style="background-color:rgb(23,90,171); padding: 10px 20px;height:120px;">
-    <p class="navbar-brand d-flex align-items-center" href="#"
-        style="color: white; font-weight:600; font-size:20px;">
-        <img src="static/images/logo.png" alt="Logo"
-            style="width: 85px;margin-bottom: 10px;">
-        ELEESA-SRID
-    </p>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span  onclick="openNav()" class="hamburger">&#9776;</span>
-    </button>
+<nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-between align-items-center" 
+     style="background-color:rgb(23,90,171); padding: 10px 20px; height: 120px;">
     
-    
+    <!-- Left Side: Logo -->
+    <div class="d-flex align-items-center">
+        <img src="static/images/logo.png" alt="Logo" style="width: 80px; margin-right: 10px;">
+        <p class="navbar-brand mb-0" style="color: white; font-weight:600; font-size:20px;">ELEESA-SRID</p>
+    </div>
 
+    <!-- Hamburger (mobile only) -->
+    <button class="navbar-toggler d-lg-none" type="button" onclick="openNav()"
+            style="border: none; background: transparent;">
+        <span class="hamburger">&#9776;</span>
+    </button>
+
+    <!-- Right Side: Nav Links (desktop only) -->
     <div class="collapse navbar-collapse justify-content-end align-items-center d-none d-lg-flex" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#" style="color: white; font-weight: 700;font-size: 21px;">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section1" style="color: white; font-weight: 700;font-size: 21px;">About</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="#section1" style="color: white; font-weight: 700;font-size: 21px;">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="color: white; font-weight: 700;font-size: 21px;">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="color: white; font-weight: 700;font-size: 21px;">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="color: white; font-weight: 700;font-size: 21px;">Blog</a></li>
@@ -35,6 +37,7 @@
         </ul>
     </div>
 </nav>
+
 
 <!-- Sidebar (for mobile) -->
 <div id="mobileSidebar"
