--- a/executives.html
+++ b/executives.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-between align-items-center" 
+    <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-between align-items-center mb-5" 
         style="background-color:rgb(23,90,171); padding: 10px 20px; height: 120px;">
         
         <!-- Left Side: Logo -->
